--- a/src/screens/battle/index.scss
+++ b/src/screens/battle/index.scss
@@ -27,7 +27,7 @@ $hp-height : 20px;
   left: 0;
   top:0;
   color: black;
-  background-color: gold;
+  background-color: rgb(243, 243, 243);
   background-image: url('./images/ruler.png');
   background-repeat: repeat-x;  
   border-bottom: 1px solid white; 
